--- a/index.html
+++ b/index.html
@@ -115,9 +115,30 @@
                 <div class="container ocupation">
                     <h2 class="section-title ocupation">Чим ми займаємося</h2>
                     <ul class="ocupation list">
-                        <li><img src="./images/box1.jpg" alt="Людина працює за клавіатурою" width="370"></li>
-                        <li><img src="./images/box2.jpg" alt="Людина працює на телефоні і компьютері" width="370"></li>
-                        <li><img src="./images/box3.jpg" alt="Людина працює на планшеті" width="370"></li>
+                        <li>
+                            <div class="ocupation-thumb">
+                                <img src="./images/box1.jpg" alt="Людина працює за клавіатурою" width="370">
+                                <div class="ocupation-overlay">
+                                    <p class="overlay-text">ДЕСКТОПНІ ДОДАТКИ</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="ocupation-thumb">
+                                <img src="./images/box2.jpg" alt="Людина працює за клавіатурою" width="370">
+                                <div class="ocupation-overlay">
+                                    <p class="overlay-text">МОБІЛЬНІ ДОДАТКИ</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="ocupation-thumb">
+                                <img src="./images/box3.jpg" alt="Людина працює за клавіатурою" width="370">
+                                <div class="ocupation-overlay">
+                                    <p class="overlay-text">ДИЗАЙНЕРСЬКІ РІШЕННЯ</p>
+                                </div>
+                            </div>
+                        </li>
                     </ul>
                 </div>                
             </section>
